--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "pinia": "^2.3.0",
+    "primeicons": "^7.0.0",
     "vanella-pharmacy": "file:",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
