--- a/backend/package.json
+++ b/backend/package.json
@@ -14,8 +14,9 @@
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.12.0",
-    "sequelize": "^6.37.5",
+    "mysql2": "^3.13.0",
+    "pharmacy-ecommerce-backend": "file:",
+    "sequelize": "^6.37.6",
     "sequelize-cli": "^6.6.2"
   }
 }
