fixed dashboard scrolling issue

--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "EmamDiin1720",
+    "password": "2193341a",
     "database": "pharmacy_ecommerce",
     "host": "localhost",
     "dialect": "mysql"
