--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.8.4",
+    "lucide-vue-next": "^0.507.0",
     "pinia": "^2.3.0",
     "primeicons": "^7.0.0",
     "venella-pharmacy": "file:",
