--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.8.4",
     "chart.js": "^4.4.9",
+    "date-fns": "^4.1.0",
     "lucide-vue-next": "^0.507.0",
     "pinia": "^2.3.0",
     "primeicons": "^7.0.0",
