--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
     "primeicons": "^7.0.0",
     "venella-pharmacy": "file:",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
